updated madyote docs

--- a/yote_root/html/Todo.html
+++ b/yote_root/html/Todo.html
@@ -44,6 +44,8 @@
 	<li>Create an account management</li>
 	<li>Create an object browsing page</li>
 	<li>Create an object browsing shell</li>
+	<li>Add FileHelper methods to update the file in question with a new value.</li>
+	<li>Consider changing the set capitaliziation uppercase convention in favor of a list defined in the object. </li>
       </ul>
     </SECTION>
     
