--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -55,6 +55,9 @@
 	the installer kinks need to be worked out post haste and a big bughunt begins.
 	This website is dogfooding Yote, meaning that all pages and apps on the site are run from a Yote server. 
       </P>
+      <P>
+	An example of a Yote app is the <A href="/gru/index.html">Animal Learning Game</A>
+      </P>
     </SECTION>
 
     <SECTION>
