--- a/yote_root/html/samples.html
+++ b/yote_root/html/samples.html
@@ -18,8 +18,13 @@
 
 	$.yote.init();
 	var page_counter = $.yote.fetch_app('Yote::Util::Counter');
-	var count = page_counter.increment( 'Samples Page' );
-	$('#counter').empty().append( count );
+	page_counter.increment( 'Samples Page',
+				function( count ) { 
+				    $('#counter').empty().append( count );
+				},
+				function( err ) {},
+				1
+			      );
     });
     </script>
   </head>
