--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -414,9 +414,7 @@ my $from_ip =       $env-&gt;{ REMOTE_ADDR };\n\
 				function( count ) {
 				    $('#counter').empty().append( count );
 				},
-				function( err ) {
-				    msg( err );
-				},
+				function( err ) { },
 				1 );
 
 	var buf = '';
